packages/fuels-macros/tests/ui/setup_program_test/unknown_options_key.rs
use fuels_macros::setup_program_test;

setup_program_test!(Options(unknown = "debug"));

fn main() {}
